--- a/WebShopSpace/WebShopSpacesAPI/WebShopSpacesAPI.csproj
+++ b/WebShopSpace/WebShopSpacesAPI/WebShopSpacesAPI.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SpaceTicket.Core.Entity\SpaceTicket.Core.Entity.csproj" />
+    <ProjectReference Include="..\TicketShopApp.Core\TicketShopApp.Core.csproj" />
+    <ProjectReference Include="..\Webshop.Infrastructure\Webshop.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
