--- a/Webshop.Infrastructure/Webshop.Infrastructure.csproj
+++ b/Webshop.Infrastructure/Webshop.Infrastructure.csproj
@@ -8,14 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpaceTicket.Core.Entity\SpaceTicket.Core.Entity.csproj" />
-    <ProjectReference Include="..\TicketShopApp.Core\TicketShopApp.Core.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.EntityFrameworkCore">
-      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.1.1\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\SpaceTicket.Core.Entity\SpaceTicket.Core.Entity.csproj" />
+    <ProjectReference Include="..\TicketShopApp.Core\TicketShopApp.Core.csproj" />
   </ItemGroup>
 
 </Project>
